profle and borrow book receipt

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,7 +27,15 @@
   }
 }
 
-
+@layer utilities {
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+  .scrollbar-hide {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
 
 @layer components {
   .form-btn {
@@ -340,6 +348,5 @@
     --chart-5: 340 75% 55%;
   }
 }
-
 
 /*  admin css */
